www/css/exhen.css
/* ... */
.pages-container > .inner {
    margin: 0 auto;
    position: relative;
    z-index: 30;
    max-width: 1200px;
    text-align: center;
    font-size: 0;
}

.pages-container .page.loaded ~ .page.loaded {
    margin-top: 20px;
}

.pages-container .page > img {
    max-width: 100%;
}

.pages-container .spinner {
    margin: 100px auto 80px;
}

.pages-container .page.loaded .index {
    position: absolute;
    bottom: 0;
    right: -30px;
    display: block;
    font-size: 16px;
    width: 30px;
    text-align: center;
}

.pages-container .page {
    position: relative;
}

.suggestions .highlight {
    color: rgb(255, 169, 169);
}

.reader-container .gallery-actions {
    position: absolute;
    top: 10px;
    right: 10px;
}

.dropdown-button .menu-outer {
    display: none;
    position: absolute;
}

.dropdown-button .menu-outer ul {
    list-style: none;
    margin: 10px 0 0;
    padding: 0;
    border: 1px solid #999;
    border-radius: 2px;
    z-index: 111;
    position: relative;
    background: #222;
}

.dropdown-button .menu-outer ul li {
    font-size: 22px;
    padding: 4px 16px;
}

.dropdown-button .menu-outer ul li:hover {
    cursor: pointer;
    color: rgb(255, 169, 169);
}

.input-clear {
    display: none;
    width: 18px;
    height: 18px;
    background: url(/img/input-clear.png) no-repeat center;
    position: absolute;
    top: 50%;
    margin-top: -9px;
    right: 30px;
    cursor: pointer;
}

.search:hover + * + .input-clear,
.search:focus ~ .input-clear,
.input-clear:hover {
    display: inline-block;
}

*::-webkit-input-placeholder {
    color: #aaa;
}

.end-flash {
    position: fixed;
    top: 50%;
    left: 50%;
    margin-left: -50px;
    font-size: 40px;
    background: rgba(0, 0, 0, 0.8);
    width: 100px;
    text-align: center;
    border-radius: 10px;
    opacity: 0;
    display: none;
}

.end-flash.active {
    opacity: 1;
    display: block;
}

.end-flash.transition {
    transition: opacity 800ms;
    display: block;
}

.dropdown-button.active .menu-outer {
    display: block;
}

.dropdown-button {
    display: inline-block;
}

.actions-menu {
    margin-right: 6px;
}

.reader-container .button {
    font-size: 20px;
    line-height: 38px;
    width: 100px;
    text-shadow: 1px 1px 2px #000;
}

.reader-container .dropdown-button .menu-outer ul li {
    font-size: 20px;
    padding: 4px 14px;
}

.gallery-item .weight:before {
    content: "|";
    padding-left: 5px;
    padding-right: 5px;
    font-size: 10px;
    vertical-align: top;
    line-height: 15px;
}

.input-wrap {
    padding-right: 14px;
    flex-grow: 1;
    position: relative;
}

.search-options > * ~ * {
    margin-left: 10px;
}

.search-options {
    flex-shrink: 0;
}

.unarchived-outer {
    display: inline-block;
    vertical-align: top;
    position: absolute;
    top: 0;
    right: 0;
}

input[type="checkbox"] {
    position: absolute;
    opacity: 0;
}

input[type="checkbox"].fancy-switch + div {
    vertical-align: top;
    width: 45px;
    height: 22px;
    border-radius: 999px;
    background-color: rgba(0, 0, 0, 0.1);
    transition: .4s;
    box-shadow: inset 0 0 0 0px rgba(0, 0, 0, 0.4);
    border: 1px solid #999;
    display: inline-block;
}

input[type="checkbox"].fancy-switch:checked + div {
    width: 45px;
    background-position: 0 0;
    border: 1px solid rgb(209, 135, 0);
}

input[type="checkbox"].fancy-switch + div > div {
    float: left;
    width: 20px;
    height: 20px;
    border-radius: inherit;
    transition: transform .4s;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(0, 0, 0, 0.4);
    pointer-events: none;
    margin-top: 0px;
    margin-left: 0px;
    border: 1px solid #999;
}

input[type="checkbox"].fancy-switch:checked + div > div {
    transform: translate3d(24px, 0, 0);
    box-shadow: 0px 0px 0 1px rgb(209, 135, 0);
    border: none;
    background: inherit;
}

.unarchived-outer label span {
    display: inline-block;
    margin-right: 10px;
}

.search-under {
    position: relative;
    height: 22px;
    margin-top: 20px;
}

.gallery-item.unarchived {
    background-size: contain;
}

.unarchived-outer label {
    cursor: pointer;
}

::-webkit-scrollbar {
    width: 12px;
}

::-webkit-scrollbar-track {
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    border: 1px solid #999;
}

@media (max-width: 1400px) {
    .gallery-item {
        width: 20%;
        padding-top: 29%;
    }
}

@media (max-width: 1100px) {
    .gallery-item {
        width: 25%;
        padding-top: 36.35%;
    }
}

@media (max-width: 900px) {
    .gallery-item {
        width: 33.333333333%;
        padding-top: 48.4%;
    }
}

@media (max-width: 720px) {
    .gallery-item .top,
    .gallery-item .bottom {
        display: none !important;
    }
    .gallery-info {
        display: none;
    }
}

@media (max-width: 580px) {
    .search-form {
        flex-wrap: wrap;
    }
    .search-options {
        flex-grow: 1;
        margin-top: 12px;
    }
}

